<resources>
    <string name="app_name">AdaptiveUIExercise</string>
    <string name="breed">Breed</string>
    <string name="size">Size</string>

    <string name="dog_information">dog information text here..</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="image_content_description">dog picture</string>
    <string name="basic_text"> is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industries standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scambled it to make a type specimen book.</string>
</resources>
