<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

    <LinearLayout
            android:orientation="vertical"
            android:layout_width="400dp"
            android:layout_height="519dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            android:layout_marginBottom="16dp"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"
            android:id="@+id/linearLayout2">
        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="183dp">
            <ImageView
                    android:layout_width="384dp"
                    android:layout_height="wrap_content" app:srcCompat="@drawable/cardigan"
                    android:id="@+id/imageView" android:layout_weight="1"
                    android:contentDescription="@string/image_content_description"/>
            <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" android:layout_weight="1" android:gravity="center_vertical">
                <TextView
                        android:text="@string/breed"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" android:id="@+id/breedTextView"/>
                <TextView
                        android:text="@string/size"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" android:id="@+id/sizeTextView"/>
            </LinearLayout>
        </LinearLayout>
        <TextView
                android:text="@string/dog_information"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/dogInfoTextView"/>
    </LinearLayout>
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="380dp"
            android:layout_height="32dp" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="8dp"
            android:layout_marginStart="8dp" android:id="@+id/linearLayout" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout2">
        <TextView
                android:text="@string/_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/oneTextView" android:layout_weight="1"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium" android:gravity="center"
                android:onClick="numberClicked"/>
        <TextView
                android:text="@string/_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/twoTextView" android:layout_weight="1"
                android:gravity="center" android:onClick="numberClicked"/>
        <TextView
                android:text="@string/_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/threeTextView" android:layout_weight="1"
                android:gravity="center" android:onClick="numberClicked"/>
    </LinearLayout>

</android.support.constraint.ConstraintLayout>